[metadata]
name = climate
version = 2013.1
summary = Reservation Service for OpenStack clouds
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Development Status :: 3 - Alpha,
    Framework :: Setuptools Plugin,
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = climate@lists.launchpad.net
home-page = https://launchpad.net/climate

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    climate

[entry_points]
console_scripts =
    climate-api=climate.cmd.climate_api:main
    climate-manager=climate.cmd.climate_manager:main
    climate-scheduler=climate.cmd.climate_scheduler:main
    climate-rpc-zmq-receiver=climate.cmd.climate_rpc_zmq_receiver:main

climate.resource.plugins =
    dummy.vm.plugin=climate.plugins.dummy_vm_plugin:DummyVMPlugin
    basic.vm.plugin=climate.plugins.basic.vm_plugin:VMPlugin

climate.notification.plugins =
    email.notifier=climate.notifications.email_notifier:EmailNotifier

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
